Fix overlay gap vs. background

--- a/style.css
+++ b/style.css
@@ -153,8 +153,8 @@ section {
     /* Scroll Snap */
     scroll-snap-align: start;
     word-break: break-word;
-    padding-bottom: 3em;
-    padding-top: 3em;
+    /* padding-bottom: 3em; */
+    /* padding-top: 3em; */
 }
 section h1 {
     font-size: 2em;
@@ -162,6 +162,7 @@ section h1 {
 }
 section h2 {
     font-size: 2em;
+    padding-top: 3em;
 }
 section h3{
     font-size: 1.5em;
@@ -205,16 +206,16 @@ section p a {
         padding-top: 3em;
     }
     section h2 {
-        margin-top: 2em;
+        /* margin-top: 2em; */
     }
     section h3{
-        margin-top: 1em;
+        margin-top: 1rem;
     }
     section p {
-        max-width: 30em;
+        max-width: 30rem;
     }
     section div p {
-        max-width: 45em;
+        max-width: 45rem;
     }
     .hamburger {
         display: none;
